syntax="proto2";

package rhekv;

option java_package="com.alipay.sofa.jraft.rhea.cmd.proto";
option java_outer_classname = "RheakvRpc";



message BaseRequest {
    optional int64 regionId = 1;
    // todo regionEpoch
    optional int64 confVer  = 2;
    optional int64 version  = 3;
    enum RequestType {
        get = 0;
        getAndPut = 1;
    }
    optional RequestType requestType = 4;
    extensions 100 to 299;
}


message GetRequest {
    extend BaseRequest {
        optional GetRequest body = 100;
    }
    optional bytes       key          = 1;
    optional bool        readOnlySafe = 2;
}

message GetAndPutRequest {
    extend BaseRequest {
        optional GetAndPutRequest body = 101;
    }
    optional bytes       key          = 1;
    optional bytes       value        = 2;
}


message BaseResponse {
    optional int64 regionId = 1;
    // todo regionEpoch
    optional int64 confVer  = 2;
    optional int64 version  = 3;
    // todo error 用二进制流传输?或者用枚举,具体异常堆栈用二进制带出去
    optional string error    = 4;
    // todo value
    optional bytes value    = 5;
    enum ResponseType {
        get = 0;
        getAndPut = 1;
        noRegionFund = 2;
    }
    optional ResponseType responseType = 6;
    extensions 100 to 299;
}

message GetResponse {
    extend BaseResponse {
        optional GetResponse body = 100;
    }
}
message GetAndPutResponse {
    extend BaseResponse {
        optional GetAndPutResponse body = 101;
    }
}
message NoRegionFoundResponse{
    extend BaseResponse {
        optional NoRegionFoundResponse body = 102;
    }
}



